[gd_scene load_steps=16 format=2]

[ext_resource path="res://images/characters/player/playerShip1_red.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Player.gd" type="Script" id=2]
[ext_resource path="res://src/states/Moving.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/states/Idle.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Kenney Mini.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/addons/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/addons/BulletSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/characters/player/star_bronze.png" type="Texture" id=8]
[ext_resource path="res://src/stats/Health.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/stats/Stats.gd" type="Script" id=10]
[ext_resource path="res://images/HUD/white_square.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.17203, 1.08181 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.795756 )
colors = PoolColorArray( 1, 1, 1, 0.235294, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="Player" type="KinematicBody2D" groups=[
"allies",
]]
collision_layer = 4
collision_mask = 25
script = ExtResource( 2 )

[node name="Pivot" type="Position2D" parent="."]
position = Vector2( 0, -4.32698 )

[node name="Sprite" type="AnimatedSprite" parent="Pivot"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
frames = SubResource( 1 )
animation = "right"

[node name="Petals" type="Node2D" parent="Pivot"]

[node name="Petal1" type="Sprite" parent="Pivot/Petals"]
position = Vector2( 0, -40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal2" type="Sprite" parent="Pivot/Petals"]
position = Vector2( 28, -28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal3" type="Sprite" parent="Pivot/Petals"]
position = Vector2( 40, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal4" type="Sprite" parent="Pivot/Petals"]
position = Vector2( 28, 28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal5" type="Sprite" parent="Pivot/Petals"]
position = Vector2( 0, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal6" type="Sprite" parent="Pivot/Petals"]
position = Vector2( -28, 28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal7" type="Sprite" parent="Pivot/Petals"]
position = Vector2( -40, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Petal8" type="Sprite" parent="Pivot/Petals"]
position = Vector2( -28, -28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="States" type="Node" parent="."]

[node name="Idle" parent="States" instance=ExtResource( 4 )]

[node name="Moving" parent="States" instance=ExtResource( 3 )]
speed = 100

[node name="Timers" type="Node" parent="."]

[node name="BulletCD" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="BulletRecharge" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="Particles" type="Node2D" parent="."]

[node name="Trail" type="CPUParticles2D" parent="Particles"]
visible = false
amount = 16
local_coords = false
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
scale_amount = 0.45
color_ramp = SubResource( 3 )
hue_variation_random = 1.0

[node name="Stats" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Health" parent="Stats" instance=ExtResource( 9 )]

[node name="Addons" type="Node2D" parent="."]

[node name="BulletSpawner" parent="Addons" instance=ExtResource( 7 )]
position = Vector2( 0, -24.9604 )

[node name="StateLabel" type="Label" parent="Addons"]
visible = false
margin_left = -100.0
margin_top = 13.7887
margin_right = 100.0
margin_bottom = 33.7887
custom_fonts/font = SubResource( 4 )
text = "State"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Addons"]

[node name="Hurtbox" parent="Addons" instance=ExtResource( 6 )]
scale = Vector2( 0.12377, 0.119998 )

[node name="Stem" type="Line2D" parent="Addons"]
position = Vector2( 0, 18.102 )
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
width = 3.0
default_color = Color( 0.67451, 0.223529, 0.223529, 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 200
antialiased = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChargeBar" type="TextureProgress" parent="HUD/Control"]
margin_left = 234.663
margin_top = 513.861
margin_right = 235.663
margin_bottom = 514.861
rect_scale = Vector2( 500, 15 )
max_value = 300.0
value = 300.0
rounded = true
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 11 )
tint_under = Color( 0, 0, 0, 0.294118 )
tint_progress = Color( 0.462745, 0.0156863, 0.490196, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timers/BulletRecharge" to="." method="_on_BulletRecharge_timeout"]
